Fix header spacing

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -12,7 +12,10 @@
     @apply tw-mb-4;
   }
   h1 {
-    @apply tw-mb-4 tw-text-4xl;
+    @apply tw-text-4xl sm:tw-text-6xl;
+  }
+  h2 {
+    @apply tw-text-3xl sm:tw-text-4xl;
   }
 }
 
